--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "Scrolling Text"
+rootProject.name = "Scrolling text challenge"
 include ':app'
